syntax = "proto3";

package tno.v1;

import "tno/v1/types.proto";

// Task management API
service TnoApi {
  // Submit a new task for execution
  rpc SubmitTask(SubmitTaskRequest) returns (SubmitTaskResponse);

  // Get current task status
  rpc GetTaskStatus(GetTaskStatusRequest) returns (GetTaskStatusResponse);

  // List all tasks
  rpc ListAllTasks(ListAllTasksRequest) returns (ListAllTasksResponse);

  // List tasks in a specific slot
  rpc ListTasksBySlot(ListTasksBySlotRequest) returns (ListTasksBySlotResponse);

  // List tasks by status
  rpc ListTasksByStatus(ListTasksByStatusRequest) returns (ListTasksByStatusResponse);

  // Cancel a running task
  rpc CancelTask(CancelTaskRequest) returns (CancelTaskResponse);
}

// SubmitTask request
message SubmitTaskRequest {
  CreateSpec spec = 1;
}

// SubmitTask response
message SubmitTaskResponse {
  string task_id = 1;
}

// GetTaskStatus request
message GetTaskStatusRequest {
  string task_id = 1;
}

// GetTaskStatus response
message GetTaskStatusResponse {
  optional TaskInfo info = 1;
}

// ListAllTasks request
message ListAllTasksRequest {}

// ListAllTasks response
message ListAllTasksResponse {
  repeated TaskInfo tasks = 1;
}

// ListTasksBySlot request
message ListTasksBySlotRequest {
  string slot = 1;
}

// ListTasksBySlot response
message ListTasksBySlotResponse {
  repeated TaskInfo tasks = 1;
}

// ListTasksByStatus request
message ListTasksByStatusRequest {
  TaskStatus status = 1;
}

// ListTasksByStatus response
message ListTasksByStatusResponse {
  repeated TaskInfo tasks = 1;
}

// CancelTask request
message CancelTaskRequest {
  string task_id = 1;
}

// CancelTask response (empty on success)
message CancelTaskResponse {}